add todo application

--- a/hellomac/TodoApplication/TodoApplication/Base.lproj/Main.storyboard
+++ b/hellomac/TodoApplication/TodoApplication/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5bs-g3-wyQ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Todo List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="TodoListViewController" customModule="TodoApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,111 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CWk-HT-gGq">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TodoListItem" id="7DS-Ug-zve" customClass="TodoListItemTableViewCell" customModule="TodoApplication" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7DS-Ug-zve" id="viR-FC-fYk">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="F5l-Um-hv0"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="d0g-M9-uNl"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CWk-HT-gGq" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="RYv-cF-JSv"/>
+                            <constraint firstItem="CWk-HT-gGq" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="V0n-JB-eo3"/>
+                            <constraint firstAttribute="trailing" secondItem="CWk-HT-gGq" secondAttribute="trailing" id="YNp-RJ-vuX"/>
+                            <constraint firstItem="CWk-HT-gGq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lbL-cm-HZF"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Todo List" id="DYJ-hl-Jv3">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jh9-p1-ccb">
+                            <connections>
+                                <segue destination="aS6-Xx-j4c" kind="show" id="dsh-Ei-Njs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="CWk-HT-gGq" id="S2e-MZ-Ntq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1117" y="429"/>
+        </scene>
+        <!--Todo Item-->
+        <scene sceneID="kJ5-9r-Adf">
+            <objects>
+                <viewController id="aS6-Xx-j4c" customClass="TodoItemViewController" customModule="TodoApplication" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OZ5-0M-ZxN"/>
+                        <viewControllerLayoutGuide type="bottom" id="UfJ-Ay-cdF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yop-kb-380">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UOs-l9-ui2">
+                                <rect key="frame" x="76" y="102" width="449" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UOs-l9-ui2" firstAttribute="leading" secondItem="yop-kb-380" secondAttribute="leadingMargin" constant="56" id="HcL-Qq-Zcy"/>
+                            <constraint firstItem="UOs-l9-ui2" firstAttribute="top" secondItem="OZ5-0M-ZxN" secondAttribute="bottom" constant="38" id="hD7-nu-jGr"/>
+                            <constraint firstItem="UOs-l9-ui2" firstAttribute="centerX" secondItem="yop-kb-380" secondAttribute="centerX" id="qLR-rm-qEx"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Todo Item" id="PVz-PC-vOQ">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="meO-cp-6Zw">
+                            <connections>
+                                <action selector="cancel:" destination="aS6-Xx-j4c" id="lJb-nT-6bL"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="G3F-K9-cg1">
+                            <connections>
+                                <action selector="save:" destination="aS6-Xx-j4c" id="BFX-fe-Hwh"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="todoField" destination="UOs-l9-ui2" id="A3n-lV-oN6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HLg-mW-BWS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1787" y="429"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bqN-zb-zdU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5bs-g3-wyQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JX4-hj-kmd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Phz-Z5-XOJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hLs-VI-Erc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="305" y="429"/>
         </scene>
     </scenes>
 </document>
